Configure maven memory settings
The ingestion-beam-integration job was crashing the VM on CircleCI.

Working theory is that it was the jacoco agent crashing due to insufficient
memory.

See https://stackoverflow.com/a/38925634/1260237